# PyDynamic

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  __init__.py  _config.yml  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup.py.deprecated  stuf.txt  stuff.txt  tox.ini  versuch.txt
.circleci/: config.yml
PyDynamic/: __init__.py  signals.py
PyDynamic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyTweeting/: PyTweeting.py  requirements.txt
deconvolution/: fit_filter.py
doc/: .buildinfo  Deconvolution by FIR.rst  Getting started.rst  Makefile  PyDynamic.deconvolution.rst  PyDynamic.identification.rst  PyDynamic.misc.rst  PyDynamic.model_estimation.rst  PyDynamic.uncertainty.rst  PyDynamic_package_diagram.drawio  Uncertainty propagation for IIR filters.rst  conf.py  genindex.html  index.html  index.rst  modules.rst  objects.inv  py-modindex.html  pydynamic-intersphinx-mappings.txt  search.html  searchindex.js
docs/: CONTRIBUTING.md  Deconvolution by FIR.rst  Deconvolution in the DFT domain.rst  Examples.rst  Getting started.md  Getting started.rst  INSTALL.md  PyDynamic.deconvolution.rst  PyDynamic.identification.rst  PyDynamic.misc.rst  PyDynamic.signals.rst  PyDynamic.uncertainty.rst  PyDynamic_module_diagram.drawio  Tutorials.rst  Uncertainty propagation for IIR filters.rst  conf.py  index.rst  numpy-intersphinx-mappings.txt  pydynamic-intersphinx-mappings.txt  (+3 more)
misc/: tools.py  (+2 more)
(+9684 files in other folders)
