[tool.poetry]
name = "PyDynamic"
version = "1.2.79"
license = "LGPL-3.0"
description = "A software package for the analysis of dynamic measurements"
authors = ["Sascha Eichstädt, Ian Smith, Thomas Bruns, Björn Ludwig, Maximilian Gruber <sascha.eichstaedt@ptb.de>"]
packages = [
 { include = "PyDynamic" } ]
readme = 'README.md'
repository = "https://github.com/PTB-PSt1/PyDynamic"
homepage = "https://github.com/PTB-PSt1/PyDynamic"
documentation = "https://pydynamic.readthedocs.io/"
keywords=['uncertainty', 'dynamic', 'deconvolution', 'metrology']
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3"
]


[tool.poetry.dependencies]
python = "^3.6"
ipykernel = "^5.1"
numpy = "^1.17"
scipy = "^1.3"
sympy = "^1.4"
matplotlib = "^3.1"
pandas = "^0.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
